--- a/al_app_api/android/app/src/main/AndroidManifest.xml
+++ b/al_app_api/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.bhanu.sriexam">
    <uses-permission android:name="android.permission.INTERNET" />
+<!--    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>-->
     <queries>
         <intent>
             <action android:name="android.intent.action.VIEW" />
