--- a/al_app_api/pubspec.yaml
+++ b/al_app_api/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 2.0.2+4
 
 environment:
   sdk: '>=2.19.6 <3.0.0'
@@ -32,11 +32,11 @@ dependencies:
     sdk: flutter
   http: ^1.2.0
   # syncfusion_flutter_pdfviewer: ^20.4.51
-  pdf_viewer_plugin: ^2.0.1
-  path_provider: ^2.0.15
-  flutter_file_downloader: ^1.1.2
+#  pdf_viewer_plugin: ^2.0.1
+#  path_provider: ^2.0.15
+  flutter_file_downloader: ^2.0.0
   # device_preview: ^1.1.0
-  flutter_slidable: ^3.0.1
+
 
  
 
@@ -44,12 +44,26 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_mobile_ads: ^4.0.0
+  google_mobile_ads: ^5.2.0
   shared_preferences: ^2.2.0
   device_preview: ^1.1.0
-  google_fonts: ^6.1.0
+  google_fonts: ^6.2.1
   url_launcher: ^6.2.4
   change_app_package_name: ^1.1.0
+  dynamic_color: ^1.7.0
+  card_loading: ^0.3.2
+  quickalert: ^1.1.0
+  msh_checkbox: ^2.0.1
+#  syncfusion_flutter_pdfviewer: ^27.1.48
+#  flutter_pdfview: ^1.3.3
+  flutter_cached_pdfview: ^0.4.2
+  lottie: ^3.1.3
+  page_transition: ^2.1.0
+  cached_network_image: ^3.4.1
+
+
+
+
 #  lottie: ^3.0.0
 #  flutter_svg: ^2.0.7
   
@@ -63,7 +77,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.1
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -79,9 +93,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/image/
-    - assets/lottie/
     - assets/svg/
     - assets/new/
+    - assets/png/
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
