--- a/al_app_api/android/app/src/main/AndroidManifest.xml
+++ b/al_app_api/android/app/src/main/AndroidManifest.xml
@@ -47,8 +47,9 @@
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
 
-            android:value="ca-app-pub-xxxxx~xxxxxx" />
-
+            android:value="ca-app-pub-6429842662800808~9933934378" />
+<!--       android:value="ca-app-pub-3940256099942544~3347511713" />-->
+<!--            android:value="ca-app-pub-6429842662800808~9939890340" />-->
 
     </application>
 </manifest>
